styles/container.css
.wordly-container{
  border: solid 2px #f3e9e9;
  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.9);
  display: grid;
  grid-template-rows: repeat(3,1fr);
  text-align: center;
  height: 70vh;
  width: 50vw;
  background-color:#f3e9e9;
  border-radius: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  align-items: center;
  justify-content: center;
  padding: 20px;
}

#wordly-form{
  width: 100%;
}

.search-btn{
  background-color: #a47171;
  color: white;
  border: none;
  display: flex;
  justify-content: center;
  align-items: center
}

.search-btn:hover{
  background-color:#885d5d ;
}

.search-input:focus{
  border-color: #885d5d;
  box-shadow: 0 0 0 0.2rem rgba(136, 93, 93, 0.25);

}

.search-icon{
  width: 20px;
  height: 20px;
}

.word-card{
  display: grid;
  grid-template-rows: repeat(5,1fr);
  align-items: center;
  text-align: left;
  justify-content: center;
  background-color: #885d5d;
  border-radius: 20px;
  border: none;
  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.9);
  padding: 10px;
  color: #f3e9e9;
}

.audio-player {
  background: #f3e9e9;
  padding: 10px;
  border-radius: 12px;
}

.audio-player audio {
  width: 100%;
}

